# VMC-QP

./: CMakeLists.txt
inc/: VMC.h  tools.h
python/: locomotion.py  main.py  slope.urdf  stanceLeg.py  stateEstimator.py  swingLeg.py
src/: CMakeLists.txt  VMC.cpp  tools.cpp
